# init

./: CMakeLists.txt  README.md  build.sh  programs  test.sh
.github/workflows/: build.yaml  docker.yaml
dockerfile/: edge  edge_cn  glibc  latest  latest_cn  minimal
src/: debug.hpp  file-parser.c  file-parser.cpp  file-parser.h  file-parser.hpp  main.c  main.cpp  my-types.h  passthru-output.c  passthru-output.cpp  passthru-output.h  passthru-output.hpp  passthru-output.thread.cpp  passthru-output.thread.hpp  process-collection.cpp  process-collection.hpp  process-create.c  process-create.cpp  process-create.h  process-create.hpp  quit-handler.c  quit-handler.cpp  quit-handler.h  quit-handler.hpp  signal-switch.h  signal-switch.hpp  wait-child.c  wait-child.h
test-program/: test-print.c
tests/: basic  mute  nslookup  quit  real1  sh  sig
tests/p/: fail.sh  sig.sh  ttt.sh
